test/bad/dup_out_var_def.dws
void main() {
    int a = 666
	void b() {
        double a = 13.2
    }
}
